--- a/docs/changes.txt
+++ b/docs/changes.txt
@@ -1,3 +1,10 @@
+Integration Build 1.2 - 20020623
+--------------------------------
+[1] Refactored HTMLAppletScanner
+[2] Refactored HTMLScriptScanner
+[3] Added testcases for script scanner
+[4] Refactored HTMLTagScanner (removed extractField)
+
 Integration Build 1.2 - 20020616
 --------------------------------
 [1] Fixed multiple line bug (reported by Gordon Deudney).
