Updated change log and release notes

--- a/docs/changes.txt
+++ b/docs/changes.txt
@@ -9,6 +9,13 @@ bcos of <a>Revision</a>. Now this is being treated as three
 seperate nodes(tag, string node, end tag)
 [6] Fixed ant script bug, not allowing it to be run from the command
 line by issuing the ant command.
+[7] Redesigned HTMLFormScanner, testcases written, included in package
+[8] Refactored HTMLImageScanner evaluate() method to be more optimized
+[9] Redesigned HTMLFrameScanner, testcases written, also written 
+HTMLFrameSetScanner.
+[10] Fixed bug in HTMLTag, now parseParameters is automatically
+called only once, when either getParsed(), or getParameter() is invoked.
+[11] toRawString() renamed to toHTML() - intention revealing name
 
 Integration Build 1.2 - 20020616
 --------------------------------
