Change log updated

--- a/docs/changes.txt
+++ b/docs/changes.txt
@@ -1,3 +1,10 @@
+Integration Build 1.2 - 20020721
+--------------------------------
+[1] Fixed HTMLStringNode bug, whereby it wasnt able to 
+skip some wierd Microsoft tags (endif)
+[2] Fixed a deep bug in HTMLTag.java, the parser would crash
+on http://www.cybergeo.presse.fr/culture/weili/weili.htm
+
 Integration Build 1.2 - 20020707
 --------------------------------
 [1] Fixed major slowdown bug in HTMLStringNode.find().
