Updated release notes, change log

--- a/docs/changes.txt
+++ b/docs/changes.txt
@@ -8,6 +8,11 @@ previous release.
 slash, then the subdirectories of the url need to be ignored.
 [4] Fixed Bug 586222 - HTMLRemarkNode bug - if a line with a remark 
 ndoe contains a string before it, the string is ignored.
+[5] Fixed major bug - allowing auto-correction
+of malformed tags. Current code is very robust. Fix allowed removal of 
+strictness vector concept, making the design simpler.
+[6] Fixed bug 586756 - in HTMLRemarkNode, if there are empty lines only, the 
+finite state machine would crash
 
 Integration Build 1.2 - 20020721
 --------------------------------
