--- a/docs/changes.txt
+++ b/docs/changes.txt
@@ -6,6 +6,7 @@ character on the last line was causing a parser crash
 [3] Modified PerformanceTest to exclude first reading in average computation
 [4] Fixed bug in HTMLParameterParser.parseParameters(), due to which
 params with spaces before = were not being picked up
+[5] Made massive API changes - throwing exceptions and using HTMLEnumeration
 
 Integration Build 1.2 - 20020728
 --------------------------------
