--- a/docs/changes.txt
+++ b/docs/changes.txt
@@ -8,6 +8,10 @@ character on the last line was causing a parser crash
 params with spaces before = were not being picked up
 [5] Made massive API changes - throwing exceptions and using HTMLEnumeration
 [6] Fixed HTMLRemarkNode bug - we can recognize stuff like <!--> now.
+[7] Fixed HTMLImageScanner bug - we can now fix image tags like
+IMG SRC"somepic.jpg" - the missing equal to can be deduced
+[8] Fixed HTMLLinkScanner bug - end tags within a link were not being included
+inside the link data.
 
 Integration Build 1.2 - 20020728
 --------------------------------
