--- a/docs/changes.txt
+++ b/docs/changes.txt
@@ -1,8 +1,9 @@
 Integration Build 1.2 - 20021031
 --------------------------------
 [1] Changed string creation to static strings in HTMLTagParser
-[2] HTMLLinkProcessor can handle urls beginning with file://
+[2] HTMLLinkProcessor can handle urls beginning with file:// (bug fix - 629601)
 [3] All scanners get the feedback object initialized from HTMLParser
+[4] Fixed bug 624045 (in HTMLParameterParser) - erroneous space key removed
 
 Integration Build 1.2 - 20021016
 --------------------------------
