--- a/docs/changes.txt
+++ b/docs/changes.txt
@@ -1,6 +1,7 @@
 Integration Build 1.2 - 20021215
 --------------------------------
 [1] Modified API of HTMLImageTag (refactored name of image loc), HTMLLinkTag (added getters)
+[2] Fixed bug 650457 - removeEscapeCharacters() incorrect
 
 Integration Build 1.2 - 20021208
 --------------------------------
