--- a/docs/changes.txt
+++ b/docs/changes.txt
@@ -4,6 +4,7 @@ Integration Build 1.2 - 20021215
 [2] Fixed bug 650457 - removeEscapeCharacters() incorrect
 [3] Fixed bug 652263 - HTMLParser and null feedback
 [4] Changed encoding used from 8859_4 to 8859_1
+[5] HTMLRemarkNode returns string data in toPlainTextString() (This is a rollback)
 
 Integration Build 1.2 - 20021208
 --------------------------------
