--- a/docs/changes.txt
+++ b/docs/changes.txt
@@ -7,6 +7,7 @@ Integration Build 1.2 - 20021215
 [5] HTMLRemarkNode returns string data in toPlainTextString() (This is a rollback)
 [6] Fixed bug 652746 - HTMLFormTag gets links correctly now
 [7] Fixed bug 653720 - HTMLNode uses sun specific class
+[8] Improved StringExtractor parser application
 
 Integration Build 1.2 - 20021208
 --------------------------------
