--- a/docs/changes.txt
+++ b/docs/changes.txt
@@ -2,6 +2,7 @@ Integration Build 1.2 - 20021222
 --------------------------------
 [1] Rewrite HTMLLinkProcessor.extract() so URL class does all the heavy lifting
 [2] Partially fixed bug 654746 - HTMLLinkScanner error, code review needed
+[3] Rendering bug fixed - allowing uniform rendering for links and images
 
 Integration Build 1.2 - 20021215
 --------------------------------
