--- a/docs/changes.txt
+++ b/docs/changes.txt
@@ -8,6 +8,7 @@ Integration Build 1.2 - 20021222
 [6] Bug fixed in HTMLFormTag.getInputTag() (NullPointerException when input tag has no name)
 [7] Added ability to get textarea tag from HTMLFormTag.
 [8] Added search capability in HTMLFormTag
+[9] Fixed bug 655627 - JSP tags with < sign (for loops) were not being parsed correctly
 
 Integration Build 1.2 - 20021215
 --------------------------------
