--- a/docs/changes.txt
+++ b/docs/changes.txt
@@ -1,3 +1,7 @@
+Integration build 1.3 - 20021228
+--------------------------------
+[1] Add URLConnection constructors to HTMLParser
+
 Production Release 1.2
 ----------------------
 [1] Rewrote HTMLLinkProcessor.extract() so URL class does all the heavy lifting
