--- a/docs/changes.txt
+++ b/docs/changes.txt
@@ -1,6 +1,7 @@
 Integration build 1.3 - 20021228
 --------------------------------
 [1] Add URLConnection constructors to HTMLParser
+[2] Honour charset parameter on HTTP header and in HTML meta tag
 
 Production Release 1.2
 ----------------------
