--- a/docs/changes.txt
+++ b/docs/changes.txt
@@ -2,8 +2,14 @@ Integration build 1.3 - 20021228
 --------------------------------
 [1] Add URLConnection constructors to HTMLParser
 [2] Honour charset parameter on HTTP header and in HTML meta tag
-[3] Refactored HTMLFormTag and HTMLLinkTag. Both inherit from HTMLCompositeTag.
-[4] HTMLSelectTag inherits from HTMLCompositeTag
+[3] Following tags now inherit from HTMLCompositeTag
+	(i) HTMLFormTag 
+	(ii) HTMLLinkTag
+	(iii) HTMLSelectTag
+	(iv) HTMLFrameSetTag 
+	(v) HTMLTitleTag
+	(vi) HTMLTextAreaTag 
+	(vii) HTMLStyleTag
 
 Production Release 1.2
 ----------------------
