--- a/docs/changes.txt
+++ b/docs/changes.txt
@@ -12,6 +12,8 @@ Integration build 1.3 - 20021228
 	(vii) HTMLStyleTag
 	(viii) HTMLScriptTag
 	(ix) HTMLAppletTag
+[4] Performed Refactoring "Introduce Parameter Object" on HTMLTag, 
+	HTMLCompositeTag, HTMLLinkTag
 	
 Production Release 1.2
 ----------------------
