--- a/docs/changes.txt
+++ b/docs/changes.txt
@@ -2,6 +2,7 @@ Integration build 1.3 - 20030104
 --------------------------------
 [1] Assume charset is correct for JVM's without Charset class to check it
 [2] Beanize the parser
+[3] Switch to swingui junit runner by default
 
 Integration build 1.3 - 20021228
 --------------------------------
