--- a/docs/changes.txt
+++ b/docs/changes.txt
@@ -4,6 +4,7 @@ Integration build 1.3 - 20030104
 [2] Beanize the parser
 [3] Switch to swingui junit runner by default
 [4] Half baked beans
+[5] Fix javadoc warnings in JDK 1.4
 
 Integration build 1.3 - 20021228
 --------------------------------
