--- a/docs/changes.txt
+++ b/docs/changes.txt
@@ -7,6 +7,7 @@ Integration build 1.3 - 20030104
 [5] Fix javadoc warnings in JDK 1.4
 [6] Added StringFindingVisitor + test code + new visitors packages
 [7] Fixed bug 659723, but HTMLStringNode is not thread-safe anymore.
+[8] JDK 1.2 compilability
 
 Integration build 1.3 - 20021228
 --------------------------------
