--- a/docs/changes.txt
+++ b/docs/changes.txt
@@ -14,6 +14,7 @@ Integration build 1.3 - 20030104
 	(i) HTMLStyleScnner 
 	(ii) HTMLSelectScanner 
 	(iii) HTMLFrameSetScanner
+	(iv) HTMLTitleScanner
 
 Integration build 1.3 - 20021228
 --------------------------------
