--- a/docs/changes.txt
+++ b/docs/changes.txt
@@ -15,7 +15,9 @@ Integration build 1.3 - 20030104
 	(ii) HTMLSelectScanner 
 	(iii) HTMLFrameSetScanner
 	(iv) HTMLTitleScanner
-
+	(v) HTMLTextAreaScanner
+	(vi) HTMLScriptScanner
+	
 Integration build 1.3 - 20021228
 --------------------------------
 [1] Add URLConnection constructors to HTMLParser
