--- a/docs/changes.txt
+++ b/docs/changes.txt
@@ -17,6 +17,11 @@ Integration build 1.3 - 20030104
 	(iv) HTMLTitleScanner
 	(v) HTMLTextAreaScanner
 	(vi) HTMLScriptScanner
+[12] Made StringNode the last parse attempt, so now Reader trys in this order:
+    remark
+    tag
+    endtag
+    string
 	
 Integration build 1.3 - 20021228
 --------------------------------
