--- a/docs/changes.txt
+++ b/docs/changes.txt
@@ -17,6 +17,8 @@ Integration build 1.3 - 20030104
 	(iv) HTMLTitleScanner
 	(v) HTMLTextAreaScanner
 	(vi) HTMLScriptScanner
+	(vii) HTMLFrameSetScanner
+
 [12] Made StringNode the last parse attempt, so now Reader trys in this order:
     remark
     tag
@@ -24,7 +26,13 @@ Integration build 1.3 - 20030104
     string
   (this will return more HTMLStringNode objects than it did before).
 [13] Improve speed by performing tag/string triage based on '<' as next character.
-	
+[14] Refactored HTMLTagScanner. The following scanners use refactored code:
+	(i) HTMLBaseHREFScanner
+	(ii) HTMLDoctypeScanner
+	(iii) HTMLFrameScanner
+	(iv) HTMLJspScanner
+	(v) HTMLMetaTagScanner
+		
 Integration build 1.3 - 20021228
 --------------------------------
 [1] Add URLConnection constructors to HTMLParser
