--- a/docs/changes.txt
+++ b/docs/changes.txt
@@ -2,6 +2,7 @@ Integration build 1.3 - 20030111
 --------------------------------
 [1] HTMLCompositeTagScanner now takes an array of match strings
 [2] toHTML(HTMLRenderer ...) was replaced by UrlModifyingVisitor
+[3] Fixed NullPointerException in HTMLScriptTag.toString()
 
 Integration build 1.3 - 20030104
 --------------------------------
