--- a/docs/changes.txt
+++ b/docs/changes.txt
@@ -3,6 +3,7 @@ Integration build 1.3 - 20030111
 [1] HTMLCompositeTagScanner now takes an array of match strings
 [2] toHTML(HTMLRenderer ...) was replaced by UrlModifyingVisitor
 [3] Fixed NullPointerException in HTMLScriptTag.toString()
+[4] Fixed bug in HTMLStringNode (breaking up empty lines into seperate string nodes)
 
 Integration build 1.3 - 20030104
 --------------------------------
