--- a/docs/changes.txt
+++ b/docs/changes.txt
@@ -8,6 +8,7 @@ Integration build 1.3 - 20030119
 [6] Fixed bug 664404 - spewing incorrect line breaks in HTMLRemarkNode.toHTML()
 [7] Added assertXmlEquals() in HTMLParserTestCase
 [8] Added better option tag support
+[9] Replaced instanceof with getType() mechanism - much faster
 
 Integration build 1.3 - 20030112
 --------------------------------
