--- a/docs/changes.txt
+++ b/docs/changes.txt
@@ -1,4 +1,4 @@
-Integration build 1.3 - 20030119
+Integration build 1.3 - 20030125
 --------------------------------
 [1] HTMLCompositeTagScanner now takes an array of match strings
 [2] toHTML(HTMLRenderer ...) was replaced by UrlModifyingVisitor
@@ -10,6 +10,7 @@ Integration build 1.3 - 20030119
 [8] Added better option tag support
 [9] Replaced instanceof with getType() mechanism - much faster
 [10] Incorporated NodeList instead of Vector in HTMLCompositeTag
+[11] Added HTMLRemarkNode support in Visitor
 
 Integration build 1.3 - 20030112
 --------------------------------
