--- a/docs/changes.txt
+++ b/docs/changes.txt
@@ -11,6 +11,7 @@ Integration build 1.3 - 20030125
 [9] Replaced instanceof with getType() mechanism - much faster
 [10] Incorporated NodeList instead of Vector in HTMLCompositeTag
 [11] Added HTMLRemarkNode support in Visitor
+[12] Fixed bug 673379 (infinite loop on encountering links like ".someurl.html")
 
 Integration build 1.3 - 20030112
 --------------------------------
