--- a/docs/changes.txt
+++ b/docs/changes.txt
@@ -11,6 +11,7 @@ Integration build 1.3 - 20030201
 [9] Added DivScanner
 [10] Modified collectInto to use NodeList
 [11] Added collectInto(NodeList, Class)
+[12] CompositeTagScanner can handle single xml-like tags e..g <div/>
 
 Integration build 1.3 - 20030125
 --------------------------------
