--- a/docs/changes.txt
+++ b/docs/changes.txt
@@ -1,6 +1,9 @@
-Integration build 1.3 - 20030209
+Integration build 1.3 - 20030211
 --------------------------------
-[1] Reference test directory of project home page to maybe cure some sporadic errors in BeanTest.
+[1] Added HtmlScanner
+[2] Removed Table, Div and Span from registry of scanners,
+	can still be added individually
+[3] Reference test directory of project home page to maybe cure some sporadic errors in BeanTest.
 
 Integration build 1.3 - 20030202
 --------------------------------
