--- a/docs/changes.txt
+++ b/docs/changes.txt
@@ -4,6 +4,7 @@ Integration build 1.3 - 20030211
 [2] Removed Table, Div and Span from registry of scanners,
 	can still be added individually
 [3] Reference test directory of project home page to maybe cure some sporadic errors in BeanTest.
+[4] added setAttribute method
 
 Integration build 1.3 - 20030202
 --------------------------------
