--- a/docs/changes.txt
+++ b/docs/changes.txt
@@ -4,7 +4,8 @@ Integration build 1.3 - 20030211
 [2] Removed Table, Div and Span from registry of scanners,
 	can still be added individually
 [3] Reference test directory of project home page to maybe cure some sporadic errors in BeanTest.
-[4] added setAttribute method
+[4] Added setAttribute method
+[5] Cleaned up HTMLNode interface (removed TYPE, getType() and print())
 
 Integration build 1.3 - 20030202
 --------------------------------
