--- a/docs/changes.txt
+++ b/docs/changes.txt
@@ -2,6 +2,8 @@ Integration build 1.3 - 20030323
 --------------------------------
 [1] Fixed bug 702547 - single quotes 
 	parsed more robustly now
+[2] Fixed bug 702614 - empty tags handled correctly now.
+	Tag now has a method isEmptyXmlTag().
 
 Integration build 1.3 - 20030316
 --------------------------------
