--- a/docs/changes.txt
+++ b/docs/changes.txt
@@ -1,3 +1,7 @@
+Integration Build 1.3 - 20030330
+--------------------------------
+[1] fixed bug (an enhancement really) 694477 quotes in content-type header
+
 Integration build 1.3 - 20030323
 --------------------------------
 [1] Fixed bug 702547 - single quotes 
