--- a/docs/changes.txt
+++ b/docs/changes.txt
@@ -1,6 +1,7 @@
 Integration Build 1.3 - 20030330
 --------------------------------
 [1] fixed bug (an enhancement really) 694477 quotes in content-type header
+[2] fix bug #699886 and #707447 by using a buffered stream reader with infinite mark
 
 Integration build 1.3 - 20030323
 --------------------------------
