--- a/docs/changes.txt
+++ b/docs/changes.txt
@@ -4,6 +4,7 @@ Integration Build 1.3 - 20030330
 [2] fix bug #699886 and #707447 by using a buffered stream reader with infinite mark
 [3] fixed bug in CompositeTagScanner, filter not being set correctly
 [4] fixed thread safety issue in TagParser (bug 711073)
+[5] fixed out of memory error when parsing custom composite tags (bug 709152)
 
 Integration build 1.3 - 20030323
 --------------------------------
