--- a/docs/changes.txt
+++ b/docs/changes.txt
@@ -1,3 +1,8 @@
+Integration Build 1.3 - 20030404
+--------------------------------
+[1] Fixed bug 712888 (scanning nested custom tags)
+[2] Redesigned assertXmlEquals()
+
 Integration Build 1.3 - 20030330
 --------------------------------
 [1] fixed bug (an enhancement really) 694477 quotes in content-type header
