--- a/docs/changes.txt
+++ b/docs/changes.txt
@@ -5,6 +5,7 @@ Integration Build 1.3 - 20030404
 [3] Fixed bug in Parser.removeScanner()
 [4] Fixed unnecessary addition of ACTION attribute in Form tag
 [5] Fixed Bullet scanner out of memory exception
+[6] Replaced scanner HashTable with Map
 
 Integration Build 1.3 - 20030330
 --------------------------------
