--- a/docs/changes.txt
+++ b/docs/changes.txt
@@ -1,3 +1,7 @@
+Integration Build 1.3 - 20030412
+--------------------------------
+[1] reimplement StringBean as NodeVisitor, testStringBeanListener now succeeds
+
 Integration Build 1.3 - 20030404
 --------------------------------
 [1] Fixed bug 712888 (scanning nested custom tags)
