--- a/docs/changes.txt
+++ b/docs/changes.txt
@@ -1,3 +1,8 @@
+Integration Build 1.3 - 20030420
+--------------------------------
+[1] Fixed bug #722046 StringExtractor.extractStrings misses most of the text,
+    change to use a StringBean to dig into tables.
+
 Integration Build 1.3 - 20030413
 --------------------------------
 [1] reimplement StringBean as NodeVisitor, testStringBeanListener now succeeds
