--- a/docs/changes.txt
+++ b/docs/changes.txt
@@ -2,6 +2,7 @@ Integration Build 1.3 - 20030420
 --------------------------------
 [1] Fixed bug #722046 StringExtractor.extractStrings misses most of the text,
     change to use a StringBean to dig into tables.
+[2] add checking in Translate to eliminate bug #722835 StringIndexOutOfBoundsException exception
 
 Integration Build 1.3 - 20030413
 --------------------------------
