--- a/docs/changes.txt
+++ b/docs/changes.txt
@@ -7,6 +7,7 @@ Integration Build 1.3 - 20030420
 [4] added fit testing framework
 [5] added parent association for each node
 [6] added digupStringNode() and findPositionOf(Node) to CompositeTag
+[7] Fixed bug 723835 in LinkExtractor
 
 Integration Build 1.3 - 20030413
 --------------------------------
