--- a/docs/changes.txt
+++ b/docs/changes.txt
@@ -1,3 +1,7 @@
+Integration Build 1.3 - 20030427
+--------------------------------
+[1] Fixed bug #722941 encoding not supported
+
 Integration Build 1.3 - 20030420
 --------------------------------
 [1] Fixed bug #722046 StringExtractor.extractStrings misses most of the text,
