--- a/docs/changes.txt
+++ b/docs/changes.txt
@@ -1,6 +1,7 @@
 Integration Build 1.3 - 20030427
 --------------------------------
 [1] Fixed bug #722941 encoding not supported
+[2] Update to build.xml to new naming scheme, clean up several javaDoc warnings
 
 Integration Build 1.3 - 20030420
 --------------------------------
