--- a/docs/changes.txt
+++ b/docs/changes.txt
@@ -2,6 +2,7 @@ Integration Build 1.3 - 20030427
 --------------------------------
 [1] Fixed bug #722941 encoding not supported
 [2] Update to build.xml to new naming scheme, clean up several javaDoc warnings
+[3] Fixed bug #725420 NPE in StringBean.visitTag
 
 Integration Build 1.3 - 20030420
 --------------------------------
