--- a/docs/changes.txt
+++ b/docs/changes.txt
@@ -3,6 +3,7 @@ Integration Build 1.3 - 20030427
 [1] Fixed bug #722941 encoding not supported
 [2] Update to build.xml to new naming scheme, clean up several javaDoc warnings
 [3] Fixed bug #725420 NPE in StringBean.visitTag
+[4] Fixed bug #717573 NullPointerException when unclosed HTML tag inside JSP tag
 
 Integration Build 1.3 - 20030420
 --------------------------------
