--- a/docs/changes.txt
+++ b/docs/changes.txt
@@ -5,6 +5,9 @@ Integration Build 1.3 - 20030427
 [3] Fixed bug #725420 NPE in StringBean.visitTag
 [4] Fixed bug #717573 NullPointerException when unclosed HTML tag inside JSP tag
 [5] Fixed bug #722870 OutOfMemory error
+[6] Fixed bug #725374 NPE while parsing text
+This will lead to a change in behavior, empty angle brackets are no longer returned
+as nodes, i.e. "this text<> has angles" used to return three nodes now returns one
 
 Integration Build 1.3 - 20030420
 --------------------------------
