--- a/docs/changes.txt
+++ b/docs/changes.txt
@@ -9,6 +9,7 @@ Integration Build 1.3 - 20030427
 This will lead to a change in behavior, empty angle brackets are no longer returned
 as nodes, i.e. "this text<> has angles" used to return three nodes now returns one
 [7] Fixed bug #725376 StringIndexOutOfBounds Exception
+[8] Added setText() to StringNode to ameliorate bug #726913 toHtml() method incomplete
 
 Integration Build 1.3 - 20030420
 --------------------------------
