--- a/docs/changes.txt
+++ b/docs/changes.txt
@@ -10,6 +10,7 @@ This will lead to a change in behavior, empty angle brackets are no longer retur
 as nodes, i.e. "this text<> has angles" used to return three nodes now returns one
 [7] Fixed bug #725376 StringIndexOutOfBounds Exception
 [8] Added setText() to StringNode to ameliorate bug #726913 toHtml() method incomplete
+[9] Removed deprecated method nextHTMLNode() from NodeIterator
 
 Integration Build 1.3 - 20030420
 --------------------------------
