--- a/docs/changes.txt
+++ b/docs/changes.txt
@@ -3,6 +3,7 @@ Integration Build 1.3 - 20030504
 [1] Fixed bug #728609 - Stack Overflow error. Caused composite tag scanner 
 	design to evolve further. Ul-Li scanner relationship can be interesting
 	study model for designing other scanner relationships.
+[2] Fixed bug #729334 NodeReader::readElement() Null point dereferenced
 
 Integration Build 1.3 - 20030427
 --------------------------------
