--- a/docs/changes.txt
+++ b/docs/changes.txt
@@ -4,6 +4,7 @@ Integration Build 1.3 - 20030504
 	design to evolve further. Ul-Li scanner relationship can be interesting
 	study model for designing other scanner relationships.
 [2] Fixed bug #729334 NodeReader::readElement() Null point dereferenced
+[3] Fixed #729368 Embedded quote and split tag
 
 Integration Build 1.3 - 20030427
 --------------------------------
