--- a/docs/changes.txt
+++ b/docs/changes.txt
@@ -4,7 +4,8 @@ Integration Build 1.3 - 20030504
 	design to evolve further. Ul-Li scanner relationship can be interesting
 	study model for designing other scanner relationships.
 [2] Fixed bug #729334 NodeReader::readElement() Null point dereferenced
-[3] Fixed #729368 Embedded quote and split tag
+[3] Fixed bug #729368 Embedded quote and split tag
+[4] Fixed bug #731684 Body and title tags with attributes not parsed
 
 Integration Build 1.3 - 20030427
 --------------------------------
