--- a/docs/changes.txt
+++ b/docs/changes.txt
@@ -1,3 +1,7 @@
+Integration Build 1.3 - 20030511
+--------------------------------
+[1] Nodelist modifications from Dhaval
+
 Integration Build 1.3 - 20030504
 --------------------------------
 [1] Fixed bug #728609 - Stack Overflow error. Caused composite tag scanner 
