--- a/docs/changes.txt
+++ b/docs/changes.txt
@@ -1,6 +1,7 @@
 Integration Build 1.3 - 20030511
 --------------------------------
 [1] Nodelist modifications from Dhaval
+[2] Fixed bug #732517 Paser(String) c'tor not handling relative path local file
 
 Integration Build 1.3 - 20030504
 --------------------------------
