--- a/docs/changes.txt
+++ b/docs/changes.txt
@@ -3,6 +3,7 @@ Integration Build 1.3 - 20030511
 [1] Nodelist modifications from Dhaval
 [2] Fixed bug #732517 Paser(String) c'tor not handling relative path local file
 [3] Fixed NPE in ScriptScanner when a script tag was not ended before the end of document
+[4] Added removeAll() to NodeList - Dhaval
 
 Integration Build 1.3 - 20030504
 --------------------------------
